# Loan-Fraud-Detection

./: .gitignore  02_Model_Pipeline.ipynb  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
backend/: Dockerfile  main.py  server.js
data/rag/: location_knowledge.json
docs/: DATA_CARD.md  MODEL_CARD.md  TASK2_AGENT_PIPELINE.md
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  App.test.js
src/ficoforce/: __init__.py  agents.py  audit.py  config.py  features.py  predict.py  rag.py  train.py
tests/: test_agents.py  test_features.py  test_rag.py
